ktug-hanyang-pua: initial commit

--- a/src/ktug_hanyang_pua/locale/en/LC_MESSAGES/ktug-hanyang-pua.po
+++ b/src/ktug_hanyang_pua/locale/en/LC_MESSAGES/ktug-hanyang-pua.po
@@ -1,12 +1,12 @@
-# English translations for METE0R-PROJECT.
+# English translations for ktug-hanyang-pua.
 # Copyright (C) 2016-2017 mete0r@sarangbang.or.kr
 # This file is distributed under the same license as the
-# METE0R-PROJECT project.
+# ktug-hanyang-pua project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2016.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: METE0R-PROJECT 0.0.0\n"
+"Project-Id-Version: ktug-hanyang-pua 0.0.0\n"
 "Report-Msgid-Bugs-To: mete0r@sarangbang.or.kr\n"
 "POT-Creation-Date: 2018-10-27 14:32+0900\n"
 "PO-Revision-Date: 2016-02-27 19:35+0900\n"
@@ -19,11 +19,11 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.6.0\n"
 
-#: src/METE0R_PACKAGE/cli.py:63
+#: src/ktug_hanyang_pua/cli.py:63
 msgid "output version information and exit"
 msgstr ""
 
-#: src/METE0R_PACKAGE/cli.py:68
+#: src/ktug_hanyang_pua/cli.py:68
 msgid "increase verbosity"
 msgstr ""
 
