Enhance documentation a bit.

--- a/docs/locale/en/LC_MESSAGES/intro.po
+++ b/docs/locale/en/LC_MESSAGES/intro.po
@@ -23,7 +23,7 @@ msgid "ktug-hanyang-pua"
 msgstr ""
 
 #: ../../../README.rst:4
-msgid "KTUG HanYang PUA conversion table reader"
+msgid "KTUG Hanyang PUA table reader/writer"
 msgstr ""
 
 #: ../../../README.rst:8
